V3.0 IS OUT NOW new ball imporoved experience on mobile with tap to place animations bug fixes and other optimizations added new bugs to fix later

--- a/res/main.css
+++ b/res/main.css
@@ -101,6 +101,12 @@ Gopal kataria, © 2020
     left : 50% ;
     z-index: 80 ;
 
+    box-shadow: 0px 3px 6px 1px #767676;
+
+    border-top-left-radius: 2px;
+    border-top-right-radius: 2px;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius:  10px
 
 }
 
@@ -112,7 +118,7 @@ Gopal kataria, © 2020
     width: 50% ;
     background: transparent ;
     z-index: 100 ;
-    cursor: none ;
+    cursor: e-resize ;
 }
 
 
@@ -148,7 +154,7 @@ Gopal kataria, © 2020
     height: 100% ;
     width: 99% ;
     background: #73ff7f13;
-    cursor: none ;
+    cursor: e-resize ;
 }
 
 
@@ -195,7 +201,7 @@ z-index: 80
         width: 40%;
         font-size: xx-large;
         font-weight: 900;
-        font-family: fantasy;
+        font-family: cursive ;
         min-width: 200px ;
         min-height: 110px;
 
